# ESE_PROG

./: .gitignore  CodeFlow.ai  README.md
Assignments/week2/: syringe_system_requirements.md
Challenge/: README.md
Challenge/Hardware/: README.MD
Challenge/Hardware/Adapters/SensorAdapter Quad PTSM4/: Sensor_Adapter_1.0.0.brd  Sensor_Adapter_1.0.0.sch
Challenge/Hardware/Adapters/SimModule Adapter/: simmodule_adapter_v2.0.1_nov2023.brd  simmodule_adapter_v2.0.1_nov2023.sch
Challenge/Hardware/SimModule_SpO2/: Spo2_module_v2.1.0_feb2024.brd  Spo2_module_v2.1.0_feb2024.sch
Code/202526/week1/Assignment/: requirements_list.md  student_instructions.md
Code/202526/week1/SimpleStepper/: README.md  keywords.txt  library.properties
Code/202526/week1/SimpleStepper/src/: SimpleStepper.cpp  (+1 more)
Code/202526/week1/TB6600_test/: TB6600_test.ino
Code/202526/week1/simple_test/: simple_test.ino
Code/202526/week1/stepper_code_example_1a/: stepper_code_example_1a.ino
Code/202526/week1/stepper_code_example_1b/: function_hierarchy.md  function_hierarchy.mermaid  stepper_code_example_1b.ino
Code/202526/week1/stepper_code_example_1d/: stepper_code_example_1d.ino
Code/202526/week1/stepper_code_example_1e/: stepper_code_example_1e.ino
Code/202526/week1/stepper_code_example_1f/: README.md  stepper_code_example_1f.ino
Code/202526/week1/stepper_code_example_1g/: stepper_code_example_1g.ino
Code/202526/week1/stepper_library/: README.md  main.c  stepper.c  stepper.h
Code/Older/AbstractInterfaces/: CMakeLists.txt  IPet.h  PoliceDog.cpp  PoliceDog.h  main  main.cpp
Code/Older/LibDemoArduinoToF/: LibDemoArduinoToF.ino
Hackaton/Hardware/: README.MD
Hackaton2026/: VitalSignsBox.textClipping
Hackaton2026/VitalSignsBox/: README.md
Hackaton2026/VitalSignsBox/ECGLeadDetection/: API.md
Hackaton2026/VitalSignsBox/Hardware/Spo2_module_v3.0.0_Simple_dec2024/: Spo2_module_v3.0.0_simple_dec2024-eagle-import.kicad_sym  Spo2_module_v3.0.0_simple_dec2024.kicad_pcb  Spo2_module_v3.0.0_simple_dec2024.kicad_prl  Spo2_module_v3.0.0_simple_dec2024.kicad_pro  Spo2_module_v3.0.0_simple_dec2024.kicad_sch  Spo2_module_v3.0.0_simple_dec2024_1.kicad_sch  Spo2_module_v3.0.0_simple_dec2024_2.kicad_sch  fp-lib-table  sym-lib-table  ~Spo2_module_v3.0.0_simple_dec2024.kicad_pcb.lck
Hackaton2026/VitalSignsBox/SpO2Detection/: API.md
Hackaton2026/VitalSignsBox/SpO2Detection/FirmwareSpO2Detect/: FirmwareSpO2Detect.ino  HeartBeat.cpp  HeartBeat.h  SPO2Sensing.h  SPO2Sensor.cpp  SPO2Sensor.h  SerialHelper.h
Hackaton2026/VitalSignsBox/TemperatureSensorsDetection/: API.md
Hackaton2026/VitalSignsBox/Utils/WireScannerLibrary/: API.md
UsefulStuff/: Choosing_a_Development_Method_English.md  Keuze_ontwikkelmethode_Capgemini_whitepaper.md  Whitepaper_Keuze_Ontwikkelmethode.md
Workshops/: README.md
Workshops/CMake/: README.md
Workshops/CMake/Keynotes/: README.md
Workshops/CMake/Source/BiggerLibrary/: README.md  config.cpp  filter.cpp  main.cpp  sht45.cpp
Workshops/CMake/Source/BiggerLibraryCMake/: .gitignore  README.md  main.cpp
Workshops/CMake/Source/BiggerLibraryCMakeV2/: .gitignore  CMakeLists.txt  README.md  copy_sources.sh  logger.cpp
Workshops/CMake/Source/BiggerLibraryCMakeV2/stage1/: CMakeLists.txt  README.md
Workshops/CMake/Source/BiggerLibraryCMakeV2/stage2/: CMakeLists.txt  README.md
Workshops/CMake/Source/BiggerLibraryCMakeV2/stage3/: CMakeLists.txt  README.md
Workshops/CMake/Source/BiggerLibraryCMakeV2/stage4/: CMakeLists.txt  README.md
Workshops/CMake/Source/BiggerLibraryCMakeV2/stage5/: CMakeLists.txt  README.md
Workshops/CMake/Source/BiggerLibraryCMakeV2/stage6/: CMakeLists.txt  README.md
Workshops/CMake/Source/BiggerLibraryMake/: .gitignore  Makefile  README.md  i2c.cpp  main.cpp
Workshops/CMake/Source/SimpleLibrary/: README.md  main.cpp  sht45.cpp  sht45.hpp
Workshops/CMake/Source/SimpleProject/: .gitignore  README.md  main.cpp
Workshops/CleanCode/: README.md
Workshops/CleanCode/MISRA_CPP_23/: scan_all_and_summarize.py  scan_configurable.py
Workshops/CleanCode/MISRA_CPP_23/Example/: our_wonderful_code.cpp
Workshops/CleanCode/MISRA_CPP_23/MISRA Rules/: MISRA_CPP_2023.md
Workshops/CleanCode/MISRA_CPP_23/MoreCode/: RGT.cmake
Workshops/Commenting/Keynotes/: Workshop Commenting 2025.key  Workshop Commenting 2025.pptx
Workshops/Commenting/Source/: Example_Vibedoc_1.cpp  Exercise_1.cpp  Exercise_2.cpp  Exercise_3.cpp  Exercise_4.cpp  Exercise_4_commented.cpp  Exercise_4_starter.cpp  Exercise_5.cpp  tmp.md
Workshops/PatternsArchitecture/: design-patterns-for-embedded-systems-in-c.md
Workshops/PatternsArchitecture/CodeExamples/FixedPointQ412Test/: CMakeLists.txt  CSKompaktData.hpp  FixedPointQ412.hpp  test_cs_kompakt_data.cpp  test_fixed_point_q412.cpp
Workshops/PatternsArchitecture/OverheadVisual/: vtable-visualization-clickable.html  vtable-visualization-extended.html  vtable-visualization.html
Workshops/UnitTesting/Keynotes/: Testing_Pyramid.ai  Workshop Unit Testing 2025.pptx
Workshops/UnitTesting/Source/MinimalTest/: CMakeLists.txt  test_first.cpp
Workshops/UnitTesting/Source/Older/SimpleTest/: CMakeLists.txt  TemperatureConvertor.cpp  TemperatureConvertor.hpp  main.cpp  temperature_conversion_test.cpp
Workshops/UnitTesting/Source/Older/UnitTesting/: CMakeLists.txt  TemperatureConversion.cpp  TemperatureConversion.hpp
Workshops/UnitTesting/Source/Older/UnitTesting/UnitTests/: conversion_test.cpp
Workshops/UnitTesting/Source/TemperatureTest/: CMakeLists.txt  Excercise01.md  test_temperature_conversion.cpp
Workshops/UnitTesting/Source/TemperatureTestComplex/: CMakeLists.txt  Exercise_02_Instructions.md  Exercise_02_Instructions_Answers.md  temperature_filter.hpp  test_temperature_filter.cpp  test_temperature_filter_fully_implemented.cpp
Workshops/UnitTesting/Source/TemperatureTestMocking/: CMakeLists.txt  Exercise_03_Instructions.md  Exercise_03_complete.md  i_heater.hpp  i_temperature_sensor.hpp  mock_heater.hpp  mock_temperature_sensor.hpp  temperature_controller.cpp  temperature_controller.hpp  test_temperature_controller.cpp
(+31 files in other folders)
